# dc20-g22

./: AlternativeScaling.ipynb  Correlation.py  CrimesInWards.ipynb  Distribution.py  FileExtract.ipynb  LM.ipynb  LinearModel.ipynb  README.md  barnetPlots.ipynb  combine.ipynb  model_best.pth.dvc  police_force_allocation.ipynb  pyproject.toml  recommendations.ipynb
data/: linearmodel.parquet  lstm.parquet
dc2_g22/lstm/: dataset_loaders.py  feature_extraction.py  main.py  model.py  prediction.py  tests.py  train-test.py  train_test.py
dc2_g22/notebooks/: Prophet.ipynb  README.md  barnetPlots.ipynb  lstm-misc.py  police_force_allocation.ipynb
dc2_g22/utils/: denoiser.py
docs/: dc2_g22.html  index.html  search.js
docs/dc2_g22/: lstm.html  notebooks.html  utils.html
docs/dc2_g22/lstm/: dataset_loaders.html  feature_extraction.html  main.html  model.html  prediction.html  tests.html  train_test.html
docs/dc2_g22/notebooks/: lstm-misc.html
docs/dc2_g22/utils/: data_loader.html  denoiser.html
model_checkpoints/: model_best.pth.dvc
notebooks/: CrimesInWards.ipynb  LM.ipynb  LinearModel.ipynb  Prophet.ipynb  WardBoundries.ipynb  lstm-misc.py
notebooks/.ipynb_checkpoints/: CrimesInWards-checkpoint.ipynb
utils/: data_loader.py
