[tool.poetry]
name = "dc2-g22"
version = "0.1.0"
description = ""
authors = ["Shapkofil <ldshapkofil@gmail.com>"]
readme = "README.md"
packages = [{include = "dc2_g22"}]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9.dev0"
pandas = "^2.0.1"
pyarrow = "^12.0.0"
dvclive = "^2.9.0"
torch = [
  {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp38-cp38-linux_x86_64.whl",  markers = "sys_platform == 'linux'"},
  {url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp38-cp38-win_amd64.whl",  markers = "sys_platform == 'win32'"},
]
tqdm = "^4.65.0"
scikit-learn = "^1.2.2"

[tool.poetry.scripts]
lstm-train = "dc2_g22.lstm.main:start"
lstm-prep = "dc2_g22.lstm.feature_extraction:start"
lstm-predict = "dc2_g22.lstm.prediction:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
